--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
-  "trailingComma": "es5",
-  "singleQuote": true,
-  "tabWidth": 2,
-  "printWidth": 100,
-  "semi": false
+    "trailingComma": "es5",
+    "singleQuote": true,
+    "tabWidth": 4,
+    "printWidth": 100,
+    "semi": true
 }
