--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
         "prettier": "^2.5.1",
         "prism-loader": "^0.2.0",
         "prismjs": "^1.25.0",
+        "rebase": "^0.3.0",
+        "replace": "^1.2.1",
         "sass": "^1.45.0",
         "sass-loader": "^12.4.0",
         "save-dev": "0.0.1-security",
