--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "build-lib": "sass --update src/styles/lib/anywhere-flex.scss:dist/lib/anywhere-flex.css --no-source-map && sass --update src/styles/lib/anywhere-flex.scss:dist/lib/anywhere-flex.min.css --no-source-map --style compressed && sass --update src/styles/lib/themes:dist/lib/themes && gulp copy-lib && node scripts/dist-package-json.js",
         "lint": "eslint 'src/**/*.js' || true",
         "prettify": "prettier --write 'src/**/*.js'",
-        "deploy": "gh-pages -d dist/www"
+        "deploy": "node scripts/docs.js && gh-pages -d dist/www"
     },
     "keywords": [
         "grid",
@@ -30,10 +30,12 @@
         "cross-env": "^7.0.3",
         "css-loader": "^6.5.1",
         "css-minimizer-webpack-plugin": "^3.2.0",
+        "dot-json": "^1.2.2",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-import-resolver-webpack": "^0.13.2",
         "eslint-plugin-prettier": "^4.0.0",
+        "file-loader": "^6.2.0",
         "gh-pages": "^3.2.3",
         "gulp": "^4.0.2",
         "html-loader": "^3.0.1",
