--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "anywhere-flex",
-    "version": "1.0.0",
+    "name": "@anywhere-ui/flex",
+    "version": "1.0.2",
     "description": "AnywhereFlex is a lightweight responsive CSS utility library to accompany Anywhere UI libraries and static webpages as well.",
     "main": "app.js",
     "author": "AdaleksTech",
@@ -8,7 +8,7 @@
     "scripts": {
         "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
         "build-app": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-        "build-lib": "sass --update src/styles/lib/anywhere-flex.scss:dist/lib/anywhere-flex.css --no-source-map && sass --update src/styles/lib/anywhere-flex.scss:dist/lib/anywhere-flex.min.css --no-source-map --style compressed && sass --update src/styles/lib/themes:dist/lib/themes && gulp copy-lib && node scripts/dist-package-json.js",
+        "build-lib": "gulp clean-dist && sass --update src/styles/lib/anywhere-flex.scss:dist/lib/anywhere-flex.css --no-source-map && sass --update src/styles/lib/anywhere-flex.scss:dist/lib/anywhere-flex.min.css --no-source-map --style compressed && sass --update src/styles/lib/themes:dist/lib/themes && gulp copy-lib && node scripts/dist-package-json.js",
         "lint": "eslint 'src/**/*.js' || true",
         "prettify": "prettier --write 'src/**/*.js'",
         "deploy": "node scripts/docs.js && gh-pages -d dist/www"
@@ -20,47 +20,47 @@
         "css utility"
     ],
     "devDependencies": {
-        "@babel/core": "^7.16.0",
-        "@babel/plugin-proposal-class-properties": "^7.16.0",
-        "@babel/preset-env": "^7.16.4",
-        "babel-loader": "^8.2.3",
+        "@babel/core": "^7.19.3",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/preset-env": "^7.19.3",
+        "babel-loader": "^8.2.5",
         "babel-polyfill": "^6.26.0",
         "clean-webpack-plugin": "^4.0.0",
-        "copy-webpack-plugin": "^9.1.0",
+        "copy-webpack-plugin": "^11.0.0",
         "cross-env": "^7.0.3",
-        "css-loader": "^6.5.1",
-        "css-minimizer-webpack-plugin": "^3.2.0",
+        "css-loader": "^6.7.1",
+        "css-minimizer-webpack-plugin": "^4.2.0",
         "dot-json": "^1.2.2",
-        "eslint": "^7.32.0",
-        "eslint-config-prettier": "^8.3.0",
+        "eslint": "^8.24.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-webpack": "^0.13.2",
-        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "file-loader": "^6.2.0",
-        "gh-pages": "^3.2.3",
+        "gh-pages": "^4.0.0",
         "gulp": "^4.0.2",
-        "html-loader": "^3.0.1",
+        "gulp-clean": "^0.4.0",
+        "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.0",
-        "mini-css-extract-plugin": "^2.4.5",
-        "postcss-loader": "^6.2.1",
-        "postcss-preset-env": "^6.7.0",
-        "prettier": "^2.5.1",
+        "mini-css-extract-plugin": "^2.6.1",
+        "postcss-loader": "^7.0.1",
+        "postcss-preset-env": "^7.8.2",
+        "prettier": "^2.7.1",
         "prism-loader": "^0.2.0",
-        "prismjs": "^1.25.0",
+        "prismjs": "^1.29.0",
         "rebase": "^0.3.0",
         "replace": "^1.2.1",
-        "sass": "^1.45.0",
-        "sass-loader": "^12.4.0",
+        "sass": "^1.55.0",
+        "sass-loader": "^13.0.2",
         "save-dev": "0.0.1-security",
         "style-loader": "^3.3.1",
-        "webpack": "^5.65.0",
-        "webpack-cli": "^4.9.1",
-        "webpack-dev-server": "^4.6.0",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.11.1",
         "webpack-merge": "^5.8.0"
     },
     "repository": {
         "type": "git",
         "url": "git@github.com:adaleks/anywhere-flex"
     },
-    "homepage": "https://github.com/adaleks/anywhere-flex",
-    "dependencies": {}
+    "homepage": "https://adaleks.github.io/anywhere-flex"
 }
